--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zavx",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aryan1982.github.io/zavx_login",
+  "homepage": "https://zavx-login.vercel.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
